--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 
 
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha03'
+
     implementation 'com.android.support:appcompat-v7:29.0.3'
     implementation 'com.android.support:design:29.0.3'
     implementation 'com.android.support:recyclerview-v7:29.0.3'
@@ -47,10 +49,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.12.2'
-    implementation "com.squareup.okhttp3:logging-interceptor:3.12.2"
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
