work on profile -> before uploading

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,25 +39,21 @@
             </intent-filter>
         </activity>
         <activity android:name="login_rejester_splash.WelcomeActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
+            <intent-filter><action android:name="android.intent.action.MAIN" /></intent-filter>
         </activity>
 
         <activity android:name="login_rejester_splash.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
+            <intent-filter><action android:name="android.intent.action.MAIN" /></intent-filter>
         </activity>
         <activity android:name="login_rejester_splash.RejesterActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
+            <intent-filter><action android:name="android.intent.action.MAIN" /></intent-filter>
         </activity>
-        <activity android:name=".CreateShipmentItemActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
+        <activity android:name="Shipments_Trips_classes.CreateShipmentItemActivity" >
+            <intent-filter><action android:name="android.intent.action.MAIN" /></intent-filter>
+        </activity>
+
+        <activity android:name="more_classes.ProfilePageActivity" >
+            <intent-filter><action android:name="android.intent.action.MAIN" /></intent-filter>
         </activity>
 
 
