work on profile -> before uploading

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,10 @@
             <intent-filter><action android:name="android.intent.action.MAIN" /></intent-filter>
         </activity>
 
+        <activity android:name="more_classes.EditProfilePageActivity" >
+            <intent-filter><action android:name="android.intent.action.MAIN" /></intent-filter>
+        </activity>
+
 
     </application>
 
