work on Search finishing deal path

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,9 @@
         <activity android:name="more_classes.EditProfilePageActivity" >
             <intent-filter><action android:name="android.intent.action.MAIN" /></intent-filter>
         </activity>
+        <activity android:name="inbox_classes.ShipmentDealPathActivity" >
+            <intent-filter><action android:name="android.intent.action.MAIN" /></intent-filter>
+        </activity>
 
 
 
