--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <application
         android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
-        android:icon="@mipmap/launcher"
+        android:icon="@mipmap/ic_launcher_start"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -60,6 +60,14 @@
             <intent-filter><action android:name="android.intent.action.MAIN" /></intent-filter>
         </activity>
         <activity android:name="Shipments_Trips_classes.EditTripItemActivity" >
+            <intent-filter><action android:name="android.intent.action.MAIN" /></intent-filter>
+        </activity>
+
+        <activity android:name="Shipments_Trips_classes.ShowShipmentActivity" >
+            <intent-filter><action android:name="android.intent.action.MAIN" /></intent-filter>
+        </activity>
+
+        <activity android:name="Shipments_Trips_classes.ShowTripActivity" >
             <intent-filter><action android:name="android.intent.action.MAIN" /></intent-filter>
         </activity>
         <activity android:name="more_classes.ProfilePageActivity" >
